# Open-AutoGLM-Android

./: .gitignore  BUILD_RELEASE.md  README.md  README_EN.md  keystore
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: app_mapping.json
app/src/main/cpp/: CMakeLists.txt  WhisperJni.cpp
app/src/main/java/com/example/open_autoglm_android/: MainActivity.kt
app/src/main/java/com/example/open_autoglm_android/asr/: AudioRecorder.kt  WhisperAsrEngine.kt  WhisperAsrNative.kt  WhisperModelManager.kt
app/src/main/java/com/example/open_autoglm_android/data/: PreferencesRepository.kt
app/src/main/java/com/example/open_autoglm_android/domain/: ActionExecutor.kt  AppRegistry.kt
app/src/main/java/com/example/open_autoglm_android/navigation/: Screen.kt
app/src/main/java/com/example/open_autoglm_android/network/: ModelClient.kt
app/src/main/java/com/example/open_autoglm_android/network/dto/: ChatRequest.kt
app/src/main/java/com/example/open_autoglm_android/service/: AutoGLMAccessibilityService.kt  MyInputMethodService.kt
app/src/main/java/com/example/open_autoglm_android/ui/screen/: AdvancedAuthScreen.kt  ChatScreen.kt  MainScreen.kt  PromptLogScreen.kt  SettingsScreen.kt
app/src/main/java/com/example/open_autoglm_android/ui/viewmodel/: ChatViewModel.kt  ModelConfigViewModel.kt  SettingsViewModel.kt
app/src/main/java/com/example/open_autoglm_android/util/: BitmapUtils.kt  InputMethodHelper.kt
